--- a/app/procrash/package.json
+++ b/app/procrash/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "recharts": "^2.12.3",
     "styled-components": "^6.1.8"
   },
@@ -31,6 +32,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.4.2"
   }
 }
