--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "author": "priyansh6570",
+  "author": "shantanu570",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
